--- a/contactus.html
+++ b/contactus.html
@@ -34,6 +34,6 @@
 
 <div>
     <p>Disclaimer:
-        <br>Only the name "Yemenis Cap" belongs to me. I do not own or have rights to any of the content used on this website.<br>All images/videos belong to BPM, Space Miami & Kiesgrube.<br>This website was created for educational and entertainment purposes only.
+        <br>Only the name "Yemenis Cap" belongs to me. I do not own or have rights to any of the content used on this website.<br>All images/videos belong to BPM, Space Miami & Kiesgrube.<br>No personal data has actually been stored or used.<br>This website was created for educational and entertainment purposes only.
     </p>
 </div>
